@@ -1,5 +1,10 @@
 2001-08-05  Bruno Haible  <haible@clisp.cons.org>
 
+	* pathname.d (Z_SHIFT, Z_AT_SLASH, Z_SUB): Parenthesize argument
+	expressions.
+
+2001-08-05  Bruno Haible  <haible@clisp.cons.org>
+
 	* spvw.d (main): Use GETTEXT, not GETTEXTL, in combination with
 	O(internal_encoding).
 
